Update kibana setting.

--- a/es-index.ipynb
+++ b/es-index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -72,19 +72,19 @@
    "source": [
     "import re\n",
     "def normalize(size):\n",
-    "    (size, unit) = re.findall(r'([0-9.]+|\\D+)',size)\n",
+    "    size, *unit = re.findall(r'([0-9.]+|\\D+)',size)\n",
     "    if (unit == 'kb'):\n",
     "       size = int(float(size) * 1024)\n",
     "    elif (unit == 'mb'):\n",
     "       size = int(float(size) * 1024 * 1024)\n",
     "    elif (unit == 'gb'):\n",
     "       size = int(float(size) * 1024 * 1024 * 1024)\n",
-    "    return size / 1024 / 1024\n"
+    "    return size #/ 1024 / 1024\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -98,8 +98,7 @@
     "df = pd.read_csv(es_index, delim_whitespace=True)\n",
     "sizedf = pd.concat([df[['index', 'store.size']],df['index'].str.extract('(?P<index_series>.*)-(?P<date>\\d{4}.\\d{2}.\\d{2})', expand=True)], axis=1)\n",
     "sizedf['store.size'] = sizedf['store.size'].map(normalize)\n",
-    "sizedf['date'] = pd.to_datetime(sizedf['date'])\n",
-    "sizedf.head()"
+    "sizedf['date'] = pd.to_datetime(sizedf['date'])"
    ]
   },
   {
@@ -115,7 +114,22 @@
    },
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(20,8))\n",
+    "fig = plt.figure(figsize=(20,8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
     "ax = fig.add_subplot(111)\n",
     "\n",
     "for lindex in sizedf['index_series'].drop_duplicates():\n",
