--- a/es-index.ipynb
+++ b/es-index.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "autoscroll": false,
     "collapsed": false,
@@ -98,7 +98,8 @@
     "df = pd.read_csv(es_index, delim_whitespace=True)\n",
     "sizedf = pd.concat([df[['index', 'store.size']],df['index'].str.extract('(?P<index_series>.*)-(?P<date>\\d{4}.\\d{2}.\\d{2})', expand=True)], axis=1)\n",
     "sizedf['store.size'] = sizedf['store.size'].map(normalize)\n",
-    "sizedf['date'] = pd.to_datetime(sizedf['date'])"
+    "sizedf['date'] = pd.to_datetime(sizedf['date'])\n",
+    "sizedf.dropna(inplace=True)"
    ]
   },
   {
@@ -133,7 +134,7 @@
     "ax = fig.add_subplot(111)\n",
     "\n",
     "for lindex in sizedf['index_series'].drop_duplicates():\n",
-    "    ldf = sizedf.loc[sizedf['index_series'] == lindex].sort_values(by=['date'])\n",
+    "    ldf = sizedf.loc[sizedf['index_series'] == lindex].sort_values('date')\n",
     "    ax.bar(ldf['date'], ldf['store.size'])\n",
     "    print(lindex)\n",
     "plt.show()"
