--- a/es-index.ipynb
+++ b/es-index.ipynb
@@ -115,7 +115,9 @@
    },
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(20,8))"
+    "index_df = pd.DataFrame(sizedf.drop_duplicates('date').sort_values(by=['date'])['date'].reset_index(drop=True))\n",
+    "for lindex in sizedf['index_series'].drop_duplicates():\n",
+    "    index_df = pd.merge(index_df, sizedf[sizedf.index_series == lindex][['date','store.size']].rename(columns={'store.size':lindex}), on='date', how='outer')"
    ]
   },
   {
@@ -130,14 +132,28 @@
     }
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "autoscroll": false,
+    "collapsed": false,
+    "ein.tags": "worksheet-0",
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
    "source": [
+    "fig = plt.figure(figsize=(20,8))\n",
     "ax = fig.add_subplot(111)\n",
     "\n",
-    "for lindex in sizedf['index_series'].drop_duplicates():\n",
-    "    ldf = sizedf.loc[sizedf['index_series'] == lindex].sort_values('date')\n",
-    "    ax.bar(ldf['date'], ldf['store.size'])\n",
-    "    print(lindex)\n",
-    "plt.show()"
+    "for lindex in np.delete(index_df.columns.values, 0):\n",
+    "    ax.bar(index_df['date'],index_df[lindex])\n",
+    "plt.style.use('dark_background')\n",
+    "plt.show()\n"
    ]
   }
  ],
