--- a/es-index.ipynb
+++ b/es-index.ipynb
@@ -131,7 +131,7 @@
     "ax = index_df.cumsum().plot.bar(figsize=(20,8), stacked=True)\n",
     "ax.plot([-1,len(index_df.index)],[disk_size, disk_size], label='最大値', color='red')\n",
     "ax.legend()\n",
-    "ax.set_title('indexサイズ累計値')\n",
+    "ax.set_title('インデックスサイズ累計値')\n",
     "plt.show()"
    ]
   }
